adding the last model ,connecting it and restyle the report

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -134,10 +134,10 @@ html(lang="en" class="scroll-smooth")
             img(src="/img/images/models-bg/heart-disease-bg.jpg" class="w-full h-full object-cover rounded-2xl")
             p(class="text-xl text-white rounded-2xl absolute left-0 bottom-0 h-0 w-full p-8 bg-gray-500 bg-opacity-70 transition-all duration-1000 opacity-0 group-hover:opacity-100 group-hover:h-full group-hover:w-full") MORE information about this model
         // ========================================== Model 5 ==========================================
-        a(href="model5.pug" class="block p-2 border border-slate-300 rounded-2xl")
+        a(href="/stroke-occurance" class="block p-2 border border-slate-300 rounded-2xl")
           div(class="h-[300px] max-900:col-span-2 max-600:col-span-2 cursor-pointer relative group")
-            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold") Model 5
+            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold w-[100%] text-center text-blue-800") Heart Stroke Test
             p(class="absolute top-36 left-10 text-xl") This is a simple description of Model
-            img(src="../images/test.jpg" class="w-full h-full object-cover rounded-2xl")
+            img(src="/img/images/models-bg/heart-stroke-bg.jpg" class="w-full h-full object-cover rounded-2xl")
             p(class="text-xl text-white rounded-2xl absolute left-0 bottom-0 h-0 w-full p-8 bg-gray-500 bg-opacity-70 transition-all duration-1000 opacity-0 group-hover:opacity-100 group-hover:h-full group-hover:w-full") MORE information about this model
 
