--- a/src/public/styles/tailwind.css
+++ b/src/public/styles/tailwind.css
@@ -708,20 +708,12 @@ video {
   order: 1;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
 .m-3 {
   margin: 0.75rem;
 }
 
 .m-5 {
   margin: 1.25rem;
-}
-
-.m-\[\] {
-  margin: ;
 }
 
 .mx-6 {
@@ -790,8 +782,12 @@ video {
   margin-bottom: 2rem;
 }
 
-.ml-\[20rem\] {
-  margin-left: 20rem;
+.mb-\[5rem\] {
+  margin-bottom: 5rem;
+}
+
+.ml-\[10rem\] {
+  margin-left: 10rem;
 }
 
 .mr-1 {
@@ -834,24 +830,8 @@ video {
   margin-top: 2rem;
 }
 
-.ml-\[10rem\] {
-  margin-left: 10rem;
-}
-
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[10re\] {
-  margin-top: 10re;
-}
-
 .mt-\[10rem\] {
   margin-top: 10rem;
-}
-
-.mb-\[5rem\] {
-  margin-bottom: 5rem;
 }
 
 .mt-\[5rem\] {
@@ -1044,6 +1024,14 @@ video {
 
 .min-w-\[200px\] {
   min-width: 200px;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
+}
+
+.max-w-6xl {
+  max-width: 72rem;
 }
 
 .max-w-7xl {
@@ -1252,6 +1240,11 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
@@ -1440,6 +1433,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .pl-14 {
   padding-left: 3.5rem;
 }
@@ -1517,6 +1514,10 @@ video {
   font-weight: 600;
 }
 
+.leading-relaxed {
+  line-height: 1.625;
+}
+
 .text-\[\#2b2e34\] {
   --tw-text-opacity: 1;
   color: rgb(43 46 52 / var(--tw-text-opacity, 1));
@@ -1540,6 +1541,11 @@ video {
 .text-blue-700 {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity, 1));
+}
+
+.text-blue-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity, 1));
 }
 
 .text-blue-950 {
@@ -1756,6 +1762,17 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
 }
 
 .focus\:border-blue-700:focus {
